# OS

./: .gitignore  CHANGELOG_v0.3.0.md  Cargo.toml  DEPLOYMENT_GUIDE.md  FILE_SPLIT_REPORT.md  HARDWARE_COMPATIBILITY.md  HARDWARE_COMPAT_SUMMARY.md  Makefile  README.md  REFACTOR.md  REFACTORING.md  REFACTORING_NOTES.md  REFACTORING_SUMMARY.md  build.ps1  build.rs  build_boot_image.ps1  build_kernel.ps1  build_log.txt  build_log_2.txt  build_log_3.txt  build_userland.ps1  build_warnings.txt  create_bootimage.py  create_image.rs  debug_serial.txt  deny.toml  errors.json  generate_font.py  io_uring_test_disasm.txt  package.json  pnpm-lock.yaml  qemu_final_test.txt  qemu_output.txt  qemu_test_cr3_switch.txt  qemu_test_current.txt  qemu_test_process_first.txt  qemu_test_readonly_code.txt  qemu_test_safe_mem.txt  qemu_volatile_test.txt  run_qemu.ps1  (+7 more)
.agent/rules/: RUN_QEMU_COMMAND_REFERENCE.md  buildandrun.md
.backup/: serial.rs  vga_buffer.rs
.cargo/: config.toml
.github/instructions/: RUN_QEMU_COMMAND.instructions.md  RUN_QEMU_COMMAND_INSTRUCTIONS.md
.github/workflows/: ci.yml  codecov.yml
.serena/: project.yml
builder/: Cargo.toml
builder/.cargo/: config.toml
builder/src/: main.rs
crates/kernel/: Cargo.toml  build.rs  linker.ld
crates/kernel/src/: lib.rs  main.rs  qemu.rs
crates/kernel/src/abi/: error.rs  io_uring.rs  io_uring_common.rs  io_uring_v2.rs  mod.rs  native.rs  result.rs
crates/kernel/src/arch/x86_64/: cpu.rs  cpu_features.rs  cr3_test.asm  cr3_test.rs  fpu.rs  gdt.rs  interrupts.rs  jump_to_usermode.asm  mod.rs  per_cpu.rs  smp.rs  syscall.rs  syscall_fast.rs  syscall_ring.rs  tss.rs
crates/kernel/src/errors/: unified.rs
crates/kernel/src/kernel/: bench.rs  loader.rs  mmio.rs  mod.rs
crates/kernel/src/kernel/async/: executor.rs  io_uring_future.rs  mod.rs  timer.rs  waker.rs
crates/kernel/src/kernel/capability/: mod.rs  table.rs
crates/kernel/src/kernel/core/: mod.rs  result.rs  traits.rs  types.rs
crates/kernel/src/kernel/driver/: console.rs  framebuffer.rs  keyboard.rs  mod.rs  pit.rs  serial.rs  vga.rs
crates/kernel/src/kernel/fs/: initrd.rs  mod.rs  pipe.rs  stdio.rs  vfs.rs  vfs_file.rs
crates/kernel/src/kernel/io_uring/: context.rs  doorbell.rs  handlers.rs  handlers_v2.rs  mod.rs  registered_buffers.rs  ring.rs  sqpoll.rs
crates/kernel/src/kernel/ipc/: channel.rs  mod.rs  pipe.rs
crates/kernel/src/kernel/mm/: allocator.rs  frame.rs  mod.rs  page_fault.rs  paging.rs  types.rs  user_paging.rs
crates/kernel/src/kernel/process/: binary_reader.rs  elf_impl.rs  elf_loader.rs  lifecycle.rs  mod.rs  switch.rs
crates/kernel/src/kernel/scheduler/: mod.rs
crates/kernel/src/kernel/security/: mod.rs
crates/kernel/src/kernel/syscall/: mod.rs  tests.rs
crates/kernel/src/kernel/task/: context.rs  mod.rs  scheduler.rs
crates/libuser/: Cargo.toml
crates/programs/: linker.ld  x86_64-user.json
crates/rany_os_abi/: Cargo.toml  README.md
crates/rany_os_abi/src/: error.rs  io_uring_common.rs  io_uring_v2.rs  lib.rs  native.rs  result.rs
docs/: CHANGELOG_TYPE_SAFETY.md  COMPREHENSIVE_REFACTORING_REPORT.md  MIGRATION_COMPLETION_REPORT.md  PHASE1_COMPLETION_REPORT.md  PHASE2.5_COMPLETION_REPORT.md  PHASE2_IMPLEMENTATION_REPORT.md  PHASE2_REFACTORING_REPORT.md  PHASE3_REFACTORING_REPORT.md  PHASE4_COMPREHENSIVE_ANALYSIS.md  PHASE5_FINAL_REPORT.md  PHASE5_FINAL_REPORT.md.bak  PHASE5_MULTI_TOOL_INTEGRATION_REPORT.md  PHASE6_COMPREHENSIVE_ANALYSIS.md  PHASE6_PERFORMANCE_OPTIMIZATION.md  PHASE7A_ERRORS_INTEGRATION.md  PHASE7B_PANIC_INTEGRATION.md  PHASE7C_LOCK_MANAGER_INTEGRATION.md  PHASE7_COMPLETION_SUMMARY.md  PHASE7_MULTI_TOOL_ANALYSIS.md  PHASE8_FINAL_INTEGRATION.md  PHASE8_ROBUSTNESS_ENHANCEMENT.md  PORTING.md  REFACTORING_NOTES.md  REFACTORING_REPORT_2025_10_11.md  REFACTORING_REPORT_ARCH_ABSTRACTION.md  REFACTORING_REPORT_ARCH_ABSTRACTION_PHASE2.md  REFACTORING_REPORT_UNSAFE_REDUCTION.md  REFACTORING_SESSION_REPORT.md  RING_SEPARATION_DESIGN.md  RING_SEPARATION_STATUS.md  RUN_QEMU_COMMAND_REFERENCE.md  SAFETY_GUIDELINES.md  SERIAL_TIMEOUT_USAGE.md  SYSCALL_IMPROVEMENTS.md  SYSCALL_PHASE2_COMPLETION.md  TYPE_SAFETY_PROJECT_FINAL_REPORT.md  UNIT_TESTS_DISABLED_REPORT.md  kernel_userland_separation.md  libuser_guide.md  syscall_interface.md
docs/changelogs/: CHANGELOG_TYPE_SAFETY.md  CHANGELOG_v0.3.0.md  PHASE2.5_CR3_ISSUE.md
docs/design/: NEXT_GEN_SYSCALL_DESIGN.md  SYSCALL_INTERFACE_V2.md  TRANSITION_PLAN_FINAL.md  syscall_interface.md
docs/implementation/: IO_URING_IMPLEMENTATION_STATUS.md  PHASE3_PER_CPU_ARCHITECTURE.md  SYSCALL_IMPROVEMENTS.md
kernel/: Cargo.toml  build.rs  x86_64-rany_os.json
kernel/src/: lib.rs  main.rs
kernel/src/abi/: io_uring.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: cpu_features.rs  cr3_test.rs  fpu.rs  gdt.rs  interrupts.rs  jump_to_usermode.asm  mod.rs  pic.rs  port.rs  qemu.rs  syscall.rs  syscall_fast.rs
kernel/src/errors/: mod.rs
kernel/src/kernel/: loader.rs  mod.rs
kernel/src/kernel/async/: executor.rs  mod.rs  timer.rs
kernel/src/kernel/core/: mod.rs  types.rs
kernel/src/kernel/driver/: console.rs  framebuffer.rs
kernel/src/kernel/fs/: mod.rs  pipe.rs
kernel/src/kernel/io_uring/: context.rs
kernel/src/kernel/mm/: frame.rs  mod.rs  page_fault.rs  paging.rs  user_paging.rs
kernel/src/kernel/process/: binary_reader.rs  elf_impl.rs  elf_loader.rs  lifecycle.rs  mod.rs  switch.rs
kernel/src/kernel/scheduler/: mod.rs
kernel/src/kernel/security/: mod.rs
kernel/src/kernel/syscall/: mod.rs  tests.rs
kernel/src/kernel/task/: mod.rs
src/: constants.rs  diagnostics.rs  display.rs  init.rs  lib.rs  main.rs  main.rs.bak  qemu.rs  serial.rs  vga_buffer.rs
src/arch/: mod.rs
src/display/: backend.rs  boot.rs  core.rs  (+3 more)
tests/: README.md  basic_boot.rs  io_synchronization.rs  should_panic.rs  syscall_alignment_test.rs  vga_buffer.rs
tools/: parse_test_char.ps1  validate_parser.ps1
userland/libuser/: Cargo.toml
userland/libuser/src/: alloc.rs  constants.rs  debug.rs  io.rs  io_uring.rs  lib.rs  mem.rs  process.rs  sync.rs  syscall.rs  testing.rs
(+149 files in other folders)
