[workspace]
members = [
    "kernel",
    "userland/libuser",
    "userland/programs/shell",
]
resolver = "2"

# ============================================================================
# Workspace-wide Profile Configuration
# ============================================================================

[profile.dev]
# Abort on panic (no unwinding in kernel space)
panic = "abort"

# Enable overflow checks even in dev builds (safety)
overflow-checks = true

# Enable debug assertions
debug-assertions = true

[profile.release]
# Abort on panic (no unwinding in kernel space)
panic = "abort"

# Fat LTO for maximum optimization across crates
lto = "fat"

# Optimize for performance (benchmarks will guide further tuning)
opt-level = 3

# Strip debug symbols in release
strip = true

# Enable overflow checks in release (safety over speed)
overflow-checks = true

# Codegen units = 1 for better optimization
codegen-units = 1

# Note: test profile does not support panic = "abort" in workspaces
