# ============================================================================
# Workspace Configuration
# ============================================================================
#
# This workspace contains the Tiny OS kernel and userland programs.
# The workspace is organized as follows:
#
# - kernel/              - The OS kernel (Ring 0, no_std)
# - userland/libuser/    - Standard library for userland programs
# - userland/programs/   - Userland programs (Ring 3, no_std)
#
# IMPORTANT: Kernel and userland are strictly separated:
# - Kernel MUST NOT depend on userland crates
# - Userland MUST NOT depend on kernel internals
# - Communication is ONLY through system calls
#
# Build order:
# 1. libuser        - User standard library
# 2. userland programs - Shell, init, etc.
# 3. kernel         - OS kernel (embeds userland programs)

[workspace]
members = [
    "kernel",                     # OS kernel
    "userland/libuser",           # Userland standard library
    "userland/programs/shell",    # Interactive shell
    "userland/programs/test",     # Test program
    "userland/programs/init",     # Init process
    "userland/programs/syscall_test", # Syscall tests
]
resolver = "2"

# ============================================================================
# Workspace-wide Profile Configuration
# ============================================================================

[profile.dev]
# Abort on panic (no unwinding in kernel space)
panic = "abort"

# Enable overflow checks even in dev builds (safety)
overflow-checks = false

# Enable debug assertions
debug-assertions = true


[profile.dev.package."*"]
opt-level = "s"  # Optimize for size in dev builds
debug = false
debug-assertions = false
overflow-checks = false
strip = "debuginfo"

[profile.release]
# Abort on panic (no unwinding in kernel space)
panic = "abort"

# Fat LTO for maximum optimization across crates
lto = "fat"

# Optimize for performance (benchmarks will guide further tuning)
opt-level = 3

# Strip debug symbols in release
strip = true

# Enable overflow checks in release (safety over speed)
overflow-checks = false

# Codegen units = 1 for better optimization
codegen-units = 1


[profile.release.package."*"]
opt-level = "s"
debug = false
overflow-checks = false
strip = "debuginfo"
# Note: test profile does not support panic = "abort" in workspaces
