# ============================================================================
# Workspace Configuration
# ============================================================================
#
# This workspace contains the Tiny OS kernel and userland programs.
# The workspace is organized as follows:
#
# - crates/kernel/              - The OS kernel (Ring 0, no_std)
# - crates/libuser/             - Standard library for userland programs
# - crates/programs/            - Userland programs (Ring 3, no_std)
#
# IMPORTANT: Kernel and userland are strictly separated:
# - Kernel MUST NOT depend on userland crates
# - Userland MUST NOT depend on kernel internals
# - Communication is ONLY through system calls
#
# Build order:
# 1. libuser        - User standard library
# 2. userland programs - Shell, init, etc.
# 3. kernel         - OS kernel (embeds userland programs)

[workspace]
members = [
    "crates/kernel",                     # OS kernel
    "crates/libuser",                    # Userland standard library
    "crates/programs/shell",             # Interactive shell
    "crates/programs/test",              # Test program
    "crates/programs/init",              # Init process
    "crates/programs/syscall_test",      # Syscall tests
    "crates/programs/io_uring_test",     # io_uring tests
    "crates/programs/hello",             # Hello world program
    "crates/programs/bench_syscall",     # Syscall benchmark
]
resolver = "2"

# ============================================================================
# Workspace-wide Profile Configuration
# ============================================================================

[profile.dev]
# Abort on panic (no unwinding in kernel space)
panic = "abort"

# Enable overflow checks even in dev builds (safety)
overflow-checks = false

# Enable debug assertions
debug-assertions = true


[profile.dev.package."*"]
opt-level = "s"  # Optimize for size in dev builds
debug = false
debug-assertions = false
overflow-checks = false
strip = "debuginfo"

[profile.release]
# Abort on panic (no unwinding in kernel space)
panic = "abort"

# Fat LTO for maximum optimization across crates
lto = "fat"

# Optimize for performance (benchmarks will guide further tuning)
opt-level = 3

# Strip debug symbols in release
strip = true

# Enable overflow checks in release (safety over speed)
overflow-checks = false

# Codegen units = 1 for better optimization
codegen-units = 1


[profile.release.package."*"]
opt-level = "s"
debug = false
overflow-checks = false
strip = "debuginfo"
# Note: test profile does not support panic = "abort" in workspaces
