[package]
name = "builder"
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE"

[workspace]

[dependencies]
bootloader = { version = "=0.11.12", default-features = false, features = ["uefi"] }

# Pin serde to avoid broken serde_core 1.0.228 (and any 1.0.2xx)
serde = "=1.0.197"
serde_json = "=1.0.115"

[[bin]]
name = "builder"
path = "src/main.rs"
