[package]
name = "tiny_os"
version = "0.4.1"
authors = ["jungamer-64 <your.email@example.com>"]
edition = "2024"
default-run = "tiny_os"
description = "Minimal x86_64 no_std Rust kernel with robust hardware support"
license = "MIT"
repository = "https://github.com/jungamer-64/OS"
keywords = ["os", "kernel", "no-std", "bare-metal", "x86_64"]
categories = ["no-std", "embedded", "os"]

[lib]
name = "tiny_os"
path = "src/lib.rs"

[[bin]]
name = "tiny_os"
path = "src/main.rs"

[features]
default = []

# テスト用feature（stdが必要）
std-tests = []

# Syscallトレース（デバッグビルド向け）
syscall_trace = []

# Usermode実行テスト
test_usermode = []

# 最適化プロファイル
[profile.dev]
opt-level = 1              # 最小限の最適化でビルド時間短縮
overflow-checks = true     # オーバーフローチェック有効

[profile.release]
opt-level = 3              # 最大最適化
lto = "fat"                # Link Time Optimization
codegen-units = 1          # 単一コードユニット（最適化重視）
panic = "abort"            # パニック時即座にabort

[profile.test]
opt-level = 1

[dependencies]
# Bootloader API
bootloader_api = "=0.11.12"

# x86_64アーキテクチャサポート
x86_64 = "0.15"

# Spin-based同期プリミティブ（no_std互換）
spin = "0.9.8"

# ヒープアロケータ
linked_list_allocator = "0.10.5"

# キーボードスキャンコードデコーダ
pc-keyboard = "0.7.0"

# CPU機能検出
raw-cpuid = "11.2"

# ログ出力trait
log = "0.4"

# 非同期ユーティリティ（no_std、allocのみ）
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }

# ロックフリーキュー
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }

# ビットフラグ
bitflags = "2.4"

[build-dependencies]
# ビルドスクリプト用の依存関係は不要（標準ライブラリのみ使用）
