[package]
name = "libuser"
version = "0.1.0"
edition = "2021"

[lib]
name = "libuser"
path = "src/lib.rs"

[dependencies]
# No external dependencies - pure no_std library

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1
